# mdviewer-rust-win

./: .rules  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md  math-check.md  rendering-check.md  table-math-check.md
.github/workflows/: publish_markdown_viewer_release.yml
crates/gpui/src/: svg_renderer.rs
crates/gpui_web/src/: platform.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: markdown.rs  math.rs  mermaid.rs  parser.rs
crates/markdown/src/html/: html_rendering.rs
crates/markdown/tests/: math_support.rs
crates/markdown_viewer/: Cargo.toml
crates/markdown_viewer/src/: app.rs  main.rs  viewer.rs
crates/release_channel/src/: lib.rs
docs/src/development/: windows.md
nix/: build.nix
nix/modules/: devshells.nix
script/: bundle-markdown-viewer-windows.ps1  capture_markdown_viewer.ps1
tooling/patched/msvc_spectre_libs/: Cargo.toml  build.rs
tooling/patched/msvc_spectre_libs/src/: lib.rs
